--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "mongoose": "^6.9.2",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   }
